trunk/Archive2/b6/fe46d419507b8c/output
main.cpp:13:6: error: invalid operands to binary expression ('std::stringstream' (aka 'basic_stringstream<char>') and 'std::ostream' (aka 'basic_ostream<char>'))
  ss << updatedStream;
  ~~ ^  ~~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:245:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const void *' for 1st argument; take the address of the argument with &
      operator<<(const void* __p)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/system_error:209:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const std::error_code' for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __e)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:108:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to '__ostream_type &(*)(__ostream_type &)' for 1st argument
      operator<<(__ostream_type& (*__pf)(__ostream_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:117:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to '__ios_type &(*)(__ios_type &)' for 1st argument
      operator<<(__ios_type& (*__pf)(__ios_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:127:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'std::ios_base &(*)(std::ios_base &)' for 1st argument
      operator<<(ios_base& (*__pf) (ios_base&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:166:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'long' for 1st argument
      operator<<(long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:170:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'unsigned long' for 1st argument
      operator<<(unsigned long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:174:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'bool' for 1st argument
      operator<<(bool __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:178:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'short' for 1st argument
      operator<<(short __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:181:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'unsigned short' for 1st argument
      operator<<(unsigned short __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:189:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'int' for 1st argument
      operator<<(int __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:192:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'unsigned int' for 1st argument
      operator<<(unsigned int __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:201:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'long long' for 1st argument
      operator<<(long long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:205:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'unsigned long long' for 1st argument
      operator<<(unsigned long long __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:220:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'double' for 1st argument
      operator<<(double __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:224:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'float' for 1st argument
      operator<<(float __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:232:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'long double' for 1st argument
      operator<<(long double __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:270:7: note: candidate function not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to '__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *') for 1st argument
      operator<<(__streambuf_type* __sb);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:502:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'char' for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:508:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:514:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'signed char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:519:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'unsigned char' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:556:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:569:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const signed char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:574:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const unsigned char *' for 2nd argument
    operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:628:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>, _Tp = std::basic_ostream<char>] not viable: no known conversion from 'std::stringstream' (aka 'basic_stringstream<char>') to 'basic_ostream<char, std::char_traits<char> > &&' for 1st argument
    operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/ostream.tcc:321:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: no known conversion from 'std::ostream' (aka 'basic_ostream<char>') to 'const char *' for 2nd argument
    operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:497:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'std::basic_ostream<char>')
    operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/basic_string.h:5167:5: note: candidate template ignored: could not match 'basic_string' against 'basic_ostream'
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/ostream:539:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::ostream' (aka 'basic_ostream<char>')
    operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
    ^
1 error generated.
